--- a/gsi526.html
+++ b/gsi526.html
@@ -106,8 +106,8 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-qualidade.pptx"> Aula 08 - Qualidade de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-testes.pptx"> Aula 09 - Testes de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/lxTZCuq6O9A"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-linha-de-produtos.pptx"> Aula 10 - Linha de Produtos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>)</li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-controle-versao.pptx"> Aula 11 - Sistemas de Controle de Versão</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/NAilVqWY1cg"> Ver Videoaula </a>) <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula12-idiomas-programacao.pptx"> Aula 12 - Idiomas de Programação</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula13-devops.pptx"> Aula 13 - DevOps</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-principios-de-projeto.pptx"> Aula 14 - Princípios de Projeto</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)</li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-padroes-de-projeto-parte-1.pptx"> Aula 15 - Padrões de Projeto (Parte 1)</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)</li>
@@ -143,9 +143,9 @@
 					<div>
 					<b>Listas:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 para a Prova 1</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> </li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
