--- a/poo.html
+++ b/poo.html
@@ -86,6 +86,7 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
 					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
+					<li>Lista 1 - 7,5 pts <b>(Data de Entrega: 03/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
 					<!--<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
 					</div> 
@@ -101,8 +102,8 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 07 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 08 - Coleções</a></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 09 - Polimorfismo</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/11.Idiomas de Programação.pdf"> Aula 11 - Idiomas de Programação</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/10.Tratamento de Exceções.ppt"> Aula 10 - Tratamento de Exceções</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/poo/11.Idiomas de Programação.pdf"> Aula 11 - Idiomas de Programação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/12.Noções de UML.ppt"> Aula 12 - Noções de UML</a></li> 						
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/Aula10 - Componentes_Implantacao.pdf"> Aula 10 - Diagramas de Componentes e Implantação</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/Aula11 - Scrum.pdf"> Aula 11 - Scrum</a></li>
