--- a/poo-lab.html
+++ b/poo-lab.html
@@ -99,11 +99,11 @@
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
 					</div>  
-					<!-- <b>Material:</b> -->
+					<b>Material:</b> 
 					<div>
 						<ul>						
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
@@ -152,10 +152,10 @@
 						</ul>
 					</div>
 					<div>
-					<!-- <b>Videoaulas:</b> -->
+					<b>Videoaulas:</b> 
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
