--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -84,10 +84,10 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 <b>(24/02)</b></li>
-					<li>Trabalho 2 <b>(24/03)</b></li>
-					<li>Trabalho 3 <b>(14/04)</b></li>
-					<li>Vídeo <b>(14/04)</b></li>
+					<li><img src="images/new2.gif" alt="" height="11" width="28"><i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i> - <b>(Entrega: 24/02)</b></li>
+					<li>Trabalho 2 <b>(Entrega: 24/03)</b></li>
+					<li>Trabalho 3 <b>(Entrega: 14/04)</b></li>
+					<li>Vídeo <b>(Entrega: 14/04)</b></li>
 					</ul> 
 					<!--<b>Avaliação e Prazos:</b>
 					<ul>
