--- a/poo.html
+++ b/poo.html
@@ -142,8 +142,8 @@
 					<b>Videoaulas:</b> 
 					<ul>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6i-_R5cAcEc&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=9"> Métodos Getter, Setter e Construtor </a></li> 
