--- a/poo-lab.html
+++ b/poo-lab.html
@@ -169,8 +169,9 @@
 					</ul>
 					</div> 
 					<div>
-					<!-- <b>Links diversos:</b> -->
+					<b>Links diversos:</b> 
 					<ul>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/njEO-oQUYsA"> Aula Síncrona Gravada - Prática 2 </a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho1_pc2.pdf"> Notas do Trabalho 1 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho2_pc2.pdf"> Notas do Trabalho 2 (Atualizado em <b>05/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
