--- a/poo-lab.html
+++ b/poo-lab.html
@@ -168,7 +168,7 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
-					<div>
+					<!--<div>
 					<b>Links diversos:</b> 
 					<ul>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/njEO-oQUYsA"> Aula Síncrona Gravada - Prática 2 </a></li>
@@ -182,9 +182,9 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho2.pdf"> Roteiro (Trabalho 2)</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/Roteiro_Trabalho3.pdf"> Roteiro (Trabalho 3)</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/avaliacao_trab_3.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Script de Avaliação </b></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> -->
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_pc2_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais </b></a></li> 
 					</ul>
-					</div> 
+					</div> -->
 				</div>
 			</div>
 		</div>
