--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -108,8 +108,8 @@
 					<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
