--- a/poo-lab.html
+++ b/poo-lab.html
@@ -168,10 +168,10 @@
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=b7xGYh3NHZU&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=27"> Polimorfismo e Sobrecarga </a> <img src="images/new2.gif" alt="" height="11" width="28"></li>-->
 					</ul>
 					</div> 
-					<!--<div>
+					<div>
 					<b>Links diversos:</b> 
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/3es5DCL9cUA"> Aula Síncrona Gravada - Prática 3 </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/UkMWyZ0irus"> Aula Síncrona Gravada - Prática 4 </a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/relatorio_atividades.pdf"> Relatório de Atividades Entregues (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho1_pc2.pdf"> Notas do Trabalho 1 (Atualizado em <b>04/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/notas_trabalho2_pc2.pdf"> Notas do Trabalho 2 (Atualizado em <b>05/11 às 16:00</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
