--- a/poo.html
+++ b/poo.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(09/02)</b> - Hoje! <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
+					<li>Prova 1 - 25 pts <b>(09/02)</b><!-- Hoje! <img src="images/deadline.png" alt="" height="25" width="19"><!-- <i> Aulas 1, 2, 3, 4 e 5</i> --></li>
 					<li>Prova 2 - 30 pts <b>(23/03)</b><!-- <i> Aulas 6, 7 e 8</i> --></li>
 					<li>Prova 3 - 30 pts <b>(13/04)</b><!-- <i> Aulas 9, 10, 11 e 12</i> --></li>
 					<li>Lista 1 - 7,5 pts <b>(23/03)</b><!-- <img src="images/deadline.png" alt="" height="25" width="19"> --></li>
@@ -94,7 +94,7 @@
 					<b>Material:</b> 
 					<div>
 						<ul>	
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução ao Java.ppt"> Aula 03 - Introdução ao Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
@@ -141,7 +141,7 @@
 					<div>
 					<b>Videoaulas:</b> 
 					<ul>
-					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
 					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
